fix button alignments for mobile

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -277,6 +277,11 @@
             min-width: 0;
             width: 100%;
           }
+
+          button {
+            text-align: center;
+            width: 100%;
+          }
         }
       }
 
